[gd_scene load_steps=5 format=2]

[ext_resource path="res://addons/keh_gddb/editor/tbl_list_entry.gd" type="Script" id=1]

[sub_resource type="Image" id=1]
data = {
"data": PoolByteArray( 0, 0, 0, 4, 0, 0, 0, 10, 0, 0, 0, 17, 0, 0, 0, 25, 0, 0, 0, 31, 0, 0, 0, 34, 0, 0, 0, 36, 0, 0, 0, 36, 0, 0, 0, 36, 0, 0, 0, 36, 0, 0, 0, 34, 0, 0, 0, 31, 0, 0, 0, 25, 0, 0, 0, 17, 0, 0, 0, 10, 0, 0, 0, 4, 0, 0, 0, 10, 0, 0, 0, 21, 0, 0, 0, 37, 0, 0, 0, 52, 0, 0, 0, 63, 0, 0, 0, 70, 0, 0, 0, 71, 0, 0, 0, 72, 0, 0, 0, 72, 0, 0, 0, 71, 0, 0, 0, 70, 0, 0, 0, 63, 0, 0, 0, 52, 0, 0, 0, 37, 0, 0, 0, 21, 0, 0, 0, 10, 0, 0, 0, 17, 0, 0, 0, 37, 63, 61, 72, 119, 91, 88, 102, 239, 87, 84, 98, 255, 85, 83, 98, 255, 85, 83, 98, 255, 85, 83, 98, 255, 85, 83, 98, 255, 85, 83, 98, 255, 85, 83, 98, 255, 87, 84, 98, 255, 91, 88, 102, 239, 63, 61, 72, 119, 0, 0, 0, 37, 0, 0, 0, 17, 0, 0, 0, 25, 0, 0, 0, 52, 91, 87, 101, 239, 74, 70, 82, 255, 70, 65, 78, 255, 69, 65, 77, 255, 69, 65, 77, 255, 69, 65, 77, 255, 69, 65, 77, 255, 69, 65, 77, 255, 69, 65, 77, 255, 70, 65, 78, 255, 74, 70, 82, 255, 91, 87, 101, 239, 0, 0, 0, 52, 0, 0, 0, 25, 0, 0, 0, 31, 0, 0, 0, 63, 85, 82, 96, 255, 69, 65, 77, 255, 68, 65, 76, 255, 68, 65, 76, 255, 68, 65, 76, 255, 68, 65, 76, 255, 68, 65, 76, 255, 68, 65, 76, 255, 68, 65, 76, 255, 68, 65, 76, 255, 69, 65, 77, 255, 85, 82, 96, 255, 0, 0, 0, 63, 0, 0, 0, 31, 0, 0, 0, 34, 0, 0, 0, 70, 83, 80, 94, 255, 67, 64, 75, 255, 67, 64, 75, 255, 67, 64, 75, 255, 67, 64, 75, 255, 67, 64, 75, 255, 67, 64, 75, 255, 67, 64, 75, 255, 67, 64, 75, 255, 67, 64, 75, 255, 67, 64, 75, 255, 83, 80, 94, 255, 0, 0, 0, 70, 0, 0, 0, 34, 0, 0, 0, 36, 0, 0, 0, 71, 82, 78, 93, 255, 65, 62, 74, 255, 65, 62, 74, 255, 65, 62, 74, 255, 65, 62, 74, 255, 65, 62, 74, 255, 65, 62, 74, 255, 65, 62, 74, 255, 65, 62, 74, 255, 65, 62, 74, 255, 65, 62, 74, 255, 82, 78, 93, 255, 0, 0, 0, 71, 0, 0, 0, 36, 0, 0, 0, 36, 0, 0, 0, 72, 79, 77, 90, 255, 63, 61, 72, 255, 63, 61, 72, 255, 63, 61, 72, 255, 63, 61, 72, 255, 63, 61, 72, 255, 63, 61, 72, 255, 63, 61, 72, 255, 63, 61, 72, 255, 63, 61, 72, 255, 63, 61, 72, 255, 79, 77, 90, 255, 0, 0, 0, 72, 0, 0, 0, 36, 0, 0, 0, 36, 0, 0, 0, 72, 78, 75, 89, 255, 62, 60, 71, 255, 62, 60, 71, 255, 62, 60, 71, 255, 62, 60, 71, 255, 62, 60, 71, 255, 62, 60, 71, 255, 62, 60, 71, 255, 62, 60, 71, 255, 62, 60, 71, 255, 62, 60, 71, 255, 78, 75, 89, 255, 0, 0, 0, 72, 0, 0, 0, 36, 0, 0, 0, 36, 0, 0, 0, 71, 77, 74, 88, 255, 61, 59, 70, 255, 61, 59, 70, 255, 61, 59, 70, 255, 61, 59, 70, 255, 61, 59, 70, 255, 61, 59, 70, 255, 61, 59, 70, 255, 61, 59, 70, 255, 61, 59, 70, 255, 61, 59, 70, 255, 77, 74, 88, 255, 0, 0, 0, 71, 0, 0, 0, 36, 0, 0, 0, 34, 0, 0, 0, 70, 75, 73, 84, 255, 60, 58, 68, 255, 60, 58, 68, 255, 60, 58, 68, 255, 60, 58, 68, 255, 60, 58, 68, 255, 60, 58, 68, 255, 60, 58, 68, 255, 60, 58, 68, 255, 60, 58, 68, 255, 60, 58, 68, 255, 75, 73, 84, 255, 0, 0, 0, 70, 0, 0, 0, 34, 0, 0, 0, 31, 0, 0, 0, 63, 75, 71, 84, 255, 60, 58, 68, 255, 60, 58, 68, 255, 60, 58, 68, 255, 60, 58, 68, 255, 60, 58, 68, 255, 60, 58, 68, 255, 60, 58, 68, 255, 60, 58, 68, 255, 60, 58, 68, 255, 60, 58, 68, 255, 75, 71, 84, 255, 0, 0, 0, 63, 0, 0, 0, 31, 0, 0, 0, 31, 0, 0, 0, 63, 75, 71, 84, 255, 59, 57, 67, 255, 59, 57, 67, 255, 59, 57, 66, 255, 59, 57, 66, 255, 59, 57, 67, 255, 59, 57, 67, 255, 59, 56, 67, 255, 59, 56, 66, 255, 59, 57, 67, 255, 59, 57, 67, 255, 75, 71, 84, 255, 0, 0, 0, 63, 0, 0, 0, 31, 0, 0, 0, 31, 0, 0, 0, 63, 75, 71, 84, 255, 58, 55, 65, 255, 57, 55, 65, 255, 57, 55, 65, 255, 58, 55, 65, 255, 57, 55, 65, 255, 58, 56, 65, 255, 58, 55, 65, 255, 58, 56, 65, 255, 57, 55, 65, 255, 58, 55, 65, 255, 75, 71, 84, 255, 0, 0, 0, 63, 0, 0, 0, 31, 0, 0, 0, 31, 0, 0, 0, 63, 75, 71, 84, 255, 57, 54, 63, 255, 57, 54, 63, 255, 57, 54, 63, 255, 56, 54, 63, 255, 56, 54, 63, 255, 56, 54, 63, 255, 56, 54, 63, 255, 57, 54, 64, 255, 56, 54, 63, 255, 56, 54, 64, 255, 75, 71, 84, 255, 0, 0, 0, 63, 0, 0, 0, 31, 0, 0, 0, 31, 0, 0, 0, 63, 75, 71, 84, 255, 55, 53, 62, 255, 55, 52, 62, 255, 55, 52, 62, 255, 55, 53, 62, 255, 55, 52, 62, 255, 55, 52, 62, 255, 55, 52, 62, 255, 55, 52, 62, 255, 55, 52, 62, 255, 54, 53, 61, 255, 75, 71, 84, 255, 0, 0, 0, 63, 0, 0, 0, 31 ),
"format": "RGBA8",
"height": 16,
"mipmaps": false,
"width": 16
}

[sub_resource type="ImageTexture" id=2]
flags = 4
flags = 4
image = SubResource( 1 )
size = Vector2( 16, 16 )

[sub_resource type="StyleBoxTexture" id=3]
content_margin_left = 6.0
content_margin_right = 6.0
content_margin_top = 6.0
content_margin_bottom = 6.0
texture = SubResource( 2 )
region_rect = Rect2( 0, 0, 16, 16 )
margin_left = 4.0
margin_right = 4.0
margin_top = 4.0
margin_bottom = 1.0
expand_margin_left = 2.0
expand_margin_right = 2.0
expand_margin_top = 2.0
expand_margin_bottom = 2.0

[node name="tbl_list_entry" type="PanelContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
custom_styles/panel = SubResource( 3 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="vbox" type="VBoxContainer" parent="."]
margin_left = 6.0
margin_top = 6.0
margin_right = 1018.0
margin_bottom = 594.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="line1" type="HBoxContainer" parent="vbox"]
margin_right = 1012.0
margin_bottom = 20.0

[node name="bt_tblname" type="Button" parent="vbox/line1"]
margin_right = 972.0
margin_bottom = 20.0
focus_mode = 0
size_flags_horizontal = 3
enabled_focus_mode = 0
align = 0

[node name="separator" type="Control" parent="vbox/line1"]
margin_left = 976.0
margin_right = 991.0
margin_bottom = 20.0
rect_min_size = Vector2( 15, 0 )
mouse_filter = 2

[node name="bt_remove" type="Button" parent="vbox/line1"]
margin_left = 995.0
margin_right = 1012.0
margin_bottom = 20.0
text = "-"

[node name="line2" type="HBoxContainer" parent="vbox"]
margin_top = 24.0
margin_right = 1012.0
margin_bottom = 38.0

[node name="lbl_filename" type="Label" parent="vbox/line2"]
margin_right = 1012.0
margin_bottom = 14.0
mouse_filter = 1
size_flags_horizontal = 3
[connection signal="mouse_entered" from="." to="." method="_on_tbl_list_entry_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_tbl_list_entry_mouse_exited"]
[connection signal="pressed" from="vbox/line1/bt_tblname" to="." method="_on_bt_tblname_pressed"]
[connection signal="pressed" from="vbox/line1/bt_remove" to="." method="_on_bt_remove_pressed"]
